--- a/config/influx_map.jsonc
+++ b/config/influx_map.jsonc
@@ -155,38 +155,38 @@
 
 	"ac2.actuatorState0": "nosGemsState",
 	"ac2.actuatorState1": "nosFillState",
-	"ac2.actuatorState2": "nosSlowVentState",
+	// "ac2.actuatorState2": "nosSlowVentState",
 	"ac2.actuatorState3": "nosLineVentState",
 	"ac2.actuatorState4": "nosEmergencyVentState",
 	"ac2.actuatorState5": "nosDrainState",
-	// "ac2.actuatorState6": "",
+	"ac2.actuatorState6": "nosSlowVentState",
 	// "ac2.actuatorState7": "",
 
 	"ac2.actuatorContinuity0": "nosGemsContinuity",
 	"ac2.actuatorContinuity1": "nosFillContinuity",
-	"ac2.actuatorContinuity2": "nosSlowVentContinuity",
+	// "ac2.actuatorContinuity2": "nosSlowVentContinuity",
 	"ac2.actuatorContinuity3": "nosLineVentContinuity",
 	"ac2.actuatorContinuity4": "nosEmergencyVentContinuity",
 	"ac2.actuatorContinuity5": "nosDrainContinuity",
-	// "ac2.actuatorContinuity6": "",
+	"ac2.actuatorContinuity6": "nosSlowVentContinuity",
 	// "ac2.actuatorContinuity7": "",
 
 	"ac2.actuatorCurrent0": "nosGemsCurrent",
 	"ac2.actuatorCurrent1": "nosFillCurrent",
-	"ac2.actuatorCurrent2": "nosSlowVentCurrent",
+	// "ac2.actuatorCurrent2": "nosSlowVentCurrent",
 	"ac2.actuatorCurrent3": "nosLineVentCurrent",
 	"ac2.actuatorCurrent4": "nosEmergencyVentCurrent",
 	"ac2.actuatorCurrent5": "nosDrainCurrent",
-	// "ac2.actuatorCurrent6": "",
+	"ac2.actuatorCurrent6": "nosSlowVentCurrent",
 	// "ac2.actuatorCurrent7": "",
 
 	"ac2.potentiometer0": "nosGemsPot",
 	"ac2.potentiometer1": "nosFillPot",
-	"ac2.potentiometer2": "nosSlowVentPot",
+	// "ac2.potentiometer2": "nosSlowVentPot",
 	"ac2.potentiometer3": "nosLineVentPot",
 	"ac2.potentiometer4": "nosEmergencyVentPot",
 	"ac2.potentiometer5": "nosDrainPot",
-	// "ac2.potentiometer6": "",
+	"ac2.potentiometer6": "nosSlowVentPot",
 	// "ac2.potentiometer7": "",
 
 	"ac2.autoventPressure": "nosAutoventPressure",
