--- a/config/controls_window.jsonc
+++ b/config/controls_window.jsonc
@@ -432,7 +432,21 @@
 						}
 					},
 					{
-						"type": null
+						"id": "eregBeginFlow",
+						"type": "ereg",
+						"name": "E-Reg Flow",
+						"field": "",
+						"actions": {
+							"lox": {
+								"type": "signal",
+								"target": "iregBeginFlow"
+							},
+							"fuel": {
+								"type": "signal",
+								"target": "iregBeginFlow"
+							}
+						},
+						"safe": true
 					},
 					{
 						"id": "eregStaticPress",
