--- a/config/influx_map.jsonc
+++ b/config/influx_map.jsonc
@@ -46,8 +46,8 @@
 
 	"pt1.ptValue0": "nosTankPT",
 	"pt1.ptValue1": "nosFillPT",
-	// "pt1.ptValue2": "",
-	// "pt1.ptValue3": "",
+	"pt1.ptValue2": "mainValvePT",
+	"pt1.ptValue3": "solenoidPanelPT",
 	"pt1.ptValue4": "ipaTankPT",
 	"pt1.ptValue5": "ipaPressPT",
 	// "pt1.ptValue6": "",
