--- a/config/engine_window.jsonc
+++ b/config/engine_window.jsonc
@@ -17,28 +17,61 @@
 				}
 			]
 		}, 
+		// {
+		// 	"type": "six-square",
+		// 	"values": [
+		// 		{
+		// 			"field": "engineLC0",
+		// 			"name": "Engine LC 0",
+		// 			"units": "lbs"
+		// 		},
+		// 		{
+		// 			"field": "engineLC1",
+		// 			"name": "Engine LC 1",
+		// 			"units": "lbs"
+		// 		},
+		// 		{
+		// 			"field": "engineLC2",
+		// 			"name": "Engine LC 2",
+		// 			"units": "lbs"
+		// 		},
+		// 		{
+		// 			"field": "engineLC3",
+		// 			"name": "Engine LC 3",
+		// 			"units": "lbs"
+		// 		}
+		// 	]
+		// },
 		{
-			"type": "six-square",
+			"type": "graph",
 			"values": [
+				// {
+				// 	"field": "engineLC0",
+				// 	"name": "Eng LC0",
+				// 	"units": "lb",
+				// 	"color": [255, 0, 0]
+				// },
+
+		    // THESE ARE SHUFFLED FOR A REASON
+			// THE LABEL NUMBER IS WHAT THE CHANNEL IS NUMBERED ON THE CASE
+			// THE FIELD NUMBER IS WHAT THE CHANNEL IS NUMBERED IN THE CODE
 				{
-					"field": "engineLC0",
-					"name": "Engine LC 0",
-					"units": "lbs"
+					"field": "engineLC2",
+					"name": "Eng LC1",
+					"units": "lb",
+					"color": [0, 255, 255]
 				},
 				{
 					"field": "engineLC1",
-					"name": "Engine LC 1",
-					"units": "lbs"
-				},
-				{
-					"field": "engineLC2",
-					"name": "Engine LC 2",
-					"units": "lbs"
+					"name": "Eng LC2",
+					"units": "lb",
+					"color": [0, 255, 0]
 				},
 				{
 					"field": "engineLC3",
-					"name": "Engine LC 3",
-					"units": "lbs"
+					"name": "Eng LC3",
+					"units": "lb",
+					"color": [0, 0, 255]
 				}
 			]
 		},
@@ -77,28 +110,81 @@
 				}
 			]
 		},
+		// {
+		// 	"type": "six-square",
+		// 	"values":[
+		// 		{
+		// 			"field": "channelPT0",
+		// 			"name": "Engn PT 0",
+		// 			"units": "PSI"
+		// 		},
+		// 		{
+		// 			"field": "channelPT1",
+		// 			"name": "Engn PT 1",
+		// 			"units": "PSI"
+		// 		},
+		// 		{
+		// 			"field": "channelPT2",
+		// 			"name": "Engn PT 2",
+		// 			"units": "PSI"
+		// 		},
+		// 		{
+		// 			"field": "channelPT3",
+		// 			"name": "Engn PT 3",
+		// 			"units": "PSI"
+		// 		}
+		// 	]
+		// },
 		{
-			"type": "six-square",
-			"values":[
+			"type": "graph",
+			"values": [
 				{
-					"field": "channelPT0",
-					"name": "Engn PT 0",
-					"units": "PSI"
+					"field": "enginePT0",
+					"name": "Eng PT0",
+					"units": "PSI",
+					"color": [123, 0, 255]
 				},
 				{
-					"field": "channelPT1",
-					"name": "Engn PT 1",
-					"units": "PSI"
+					"field": "enginePT1",
+					"name": "Eng PT1",
+					"units": "",
+					"color": [0, 16, 255]
 				},
 				{
-					"field": "channelPT2",
-					"name": "Engn PT 2",
-					"units": "PSI"
+					"field": "enginePT2",
+					"name": "Eng PT2",
+					"units": "",
+					"color": [0, 164, 255]
 				},
 				{
-					"field": "channelPT3",
-					"name": "Engn PT 3",
-					"units": "PSI"
+					"field": "enginePT3",
+					"name": "Eng PT3",
+					"units": "",
+					"color": [63, 255, 183]
+				},
+				{
+					"field": "enginePT4",
+					"name": "Eng PT4",
+					"units": "",
+					"color": [183, 255, 63]
+				},
+				{
+					"field": "enginePT5",
+					"name": "Eng PT5",
+					"units": "",
+					"color": [255, 185, 0]
+				},
+				{
+					"field": "enginePT6",
+					"name": "Eng PT6",
+					"units": "",
+					"color": [255, 48, 0]
+				},
+				{
+					"field": "enginePT7",
+					"name": "Eng PT7",
+					"units": "",
+					"color": [127, 0, 255]
 				}
 			]
 		},
