TC voltage logging

--- a/config/boards/tc_board.jsonc
+++ b/config/boards/tc_board.jsonc
@@ -21,5 +21,17 @@
 		["tcValue5", "asFloat"],
 		["tcValue6", "asFloat"],
 		["tcValue7", "asFloat"]
+	],
+
+	// Raw Voltages
+	"5": [
+		["tcRawVoltage0", "asFloat"],
+		["tcRawVoltage1", "asFloat"],
+		["tcRawVoltage2", "asFloat"],
+		["tcRawVoltage3", "asFloat"],
+		["tcRawVoltage4", "asFloat"],
+		["tcRawVoltage5", "asFloat"],
+		["tcRawVoltage6", "asFloat"],
+		["tcRawVoltage7", "asFloat"]
 	]
 }
