--- a/config/boards_status_window.jsonc
+++ b/config/boards_status_window.jsonc
@@ -130,8 +130,25 @@
 				}
 			]
 		},
+		// {
+		// 	"type": "E-Reg Moment"
+		// },
 		{
-			"type": "E-Reg Moment"
+			"type": "graph",
+			"values": [
+				{
+					"field": "cap.fuelCapVal",
+					"name": "Nitrous Cap Fill Value",
+					"units": "pF",
+					"color": [255, 0, 0]
+				},
+				{
+					"field": "cap.loxCapVal",
+					"name": "IPA Cap Fill Value",
+					"units": "pF",
+					"color": [0, 255, 0]
+				}
+			]
 		},
 		{
 			"type": "logs"
