--- a/config/propellant_fill_window.jsonc
+++ b/config/propellant_fill_window.jsonc
@@ -151,14 +151,14 @@
 			"type": "graph",
 			"values": [
 				{
-					"field": "cap.fuelCapVal",
+					"field": "ncap.cap",
 					"name": "Nitrous Cap Fill Value",
 					"units": "pF",
 					"color": [255, 0, 0]
 				},
 				{
-					"field": "cap.loxCapVal",
-					"name": "Ethane Cap Fill Value",
+					"field": "icap.cap",
+					"name": "IPA Cap Fill Value",
 					"units": "pF",
 					"color": [0, 255, 0]
 				}
