--- a/config/boards.jsonc
+++ b/config/boards.jsonc
@@ -47,8 +47,12 @@
 	// 	"type": "ereg",
 	// 	"address": "10.0.0.62"
 	// },
-	"cap": {
-		"type": "flightV4",
+	"icap": {
+		"type": "cap",
+		"address": "10.0.0.43"
+	},
+	"ncap": {
+		"type": "cap",
 		"address": "10.0.0.42"
 	},
 	"ireg": {
