--- a/config/boards.jsonc
+++ b/config/boards.jsonc
@@ -27,10 +27,10 @@
 		"type": "pt",
 		"address": "10.0.0.32"
 	},
-	// "pt3": {
-	// 	"type": "pt",
-	// 	"address": "10.0.0.33"
-	// },
+	"pt3": {
+		"type": "pt",
+		"address": "10.0.0.33"
+	},
 	"lc1": {
 		"type": "lc",
 		"address": "10.0.0.21"
@@ -39,14 +39,6 @@
 		"type": "lc",
 		"address": "10.0.0.22"
 	},
-	// "oreg": {
-	// 	"type": "ereg",
-	// 	"address": "10.0.0.61"
-	// },
-	// "freg": {
-	// 	"type": "ereg",
-	// 	"address": "10.0.0.62"
-	// },
 	"icap": {
 		"type": "cap",
 		"address": "10.0.0.43"
