--- a/config/influx_map.jsonc
+++ b/config/influx_map.jsonc
@@ -50,8 +50,8 @@
 	"pt1.ptValue3": "solenoidPanelPT",
 	"pt1.ptValue4": "ipaTankPT",
 	"pt1.ptValue5": "ipaPressPT",
-	"pt1.ptValue6": "enginePT6",
-	"pt1.ptValue7": "enginePT7",
+	// "pt1.ptValue6": "enginePT6",
+	// "pt1.ptValue7": "enginePT7",
 
 	// PT Board 2
 
@@ -76,6 +76,26 @@
 	"pt2.ptValue5": "enginePT3",
 	"pt2.ptValue6": "enginePT4",
 	"pt2.ptValue7": "enginePT5",
+
+	// PT Board 3
+
+	"pt3.boardConnected": "pt3Connected",
+	"pt3.boardKbps": "pt3Kbps",
+
+	"pt3.ptSupply24Voltage": "pt3Supply24Voltage",
+	"pt3.ptSupply24Current": "pt3Supply24Current",
+	"pt3.ptSupply24Power": "pt3Supply24Power",
+
+	"pt3.ptValue0": "enginePT6",
+	"pt3.ptValue1": "enginePT7",
+	"pt3.ptValue2": "enginePT8",
+	"pt3.ptValue3": "enginePT9",
+	"pt3.ptValue4": "enginePT10",
+	// "pt3.ptValue5": "enginePT11",
+	// "pt3.ptValue6": "enginePT4",
+	// "pt3.ptValue7": "enginePT5",
+
+	
 
 	// LC Board 1
 
